--- a/_posts/2017-04-14-variables_01.md
+++ b/_posts/2017-04-14-variables_01.md
@@ -15,13 +15,13 @@ Ací no hi ha que declarar res sols posar `i_nom_de_variable`.
 
 Exemple de variable:
 
-```
+```ruby
 nombre = "Hola Mundo"
 ```
 
 Ara contextualitzat:
 
-```
+```ruby
 class HolaMundo
         def initialize()
         end
