--- a/_posts/2017-04-13-Iniciant.md
+++ b/_posts/2017-04-13-Iniciant.md
@@ -14,3 +14,59 @@ Inicie aquest blog amb tres objectius:
 - Construir un full de ruta que em dóne accés al domini necessari per aportar artefactes funcionals.
 - Compartir aquesta experiència.
 
+
+### Què és Ruby?
+
+- Un llenguatge interpretat, no el compilem.
+- No hi ha punts i coma en cada línia, no són necessaris.
+- Tipat dinàmic: no és necessari definir el tipus d'una variable.
+- Tot és un objecte.
+- És un llenguatge productiu, es pot crear molt ràpid,és flexible.
+- Pots reescriure el llenguatge.
+
+### Inspirat en
+
+- Lisp
+- Perl
+- Smalltalk
+- Eiffel
+- Ada
+
+### Característiques
+
+- Busca ser natural, no simple.
+- Prefereix l'anglés, que la puntuació.
+- Existeixen múltiples implementacions del llenguatge.
+- Ha inspirat a la creació d'altres llenguatges com Elixir o CoffeScript.
+
+### Com s'utilitza aquesta tecnologia?
+
+- Principalment per crear aplicacions web
+- Ruby on Rayls
+- Hi ha utilitats en la terminal com SASS o HomeBrew
+- És ràpid fer ferramentes amb Ruby.
+- Pots utilitzar Ruby per a apps mòbils natives amb RubyMotion
+- Pots crear interfaces gràfiques amb QT o amb Swing, usant Ruby, com aplicacions d'escriptori.
+
+### Qui utilitza Ruby?
+
+- Basecamp
+- Github
+- Heroku
+- Aribnb
+- KickStarter
+- DigitalOcean
+- TeeSpring
+- Square
+- Tumblr
+- Twiter (originalment)
+
+### Per què usar Ruby?
+
+- Incrementar la teua productivitat
+- T'importa l'expressivitat
+- Vols un llenguatge flexible
+- No t'agrada repetir codi
+- Vols ser part d'una comunitat activa
+
+
