--- a/_posts/2017-04-14-variables_01.md
+++ b/_posts/2017-04-14-variables_01.md
@@ -36,3 +36,46 @@ objeto.saluda
 gets()
 ```
 
+Una **variable** és un magatzem, un identificador d'una dada.
+
+- Variable: nombre
+- Operador d'assignació: "Uriel"
+- No cal indicar de quin tipus és aquesta vable com en altres llenguatges com Java.
+
+```ruby
+nombre = "Uriel"
+
+edad = 23
+
+tutor = "Uriel"
+```
+
+Canvi de dades tipades.
+
+```ruby
+variable = "Uriel"
+
+puts variable
+
+variable = 20
+
+puts variable
+```
+
+Output
+
+```ruby
+Uriel
+20
+```
+
+Es veu com hem canviat el tipus de variable i no dóna error.
+
+Amb noms de variables més llargs cal lligar-los amb un guió baix `nom_del_tutor`. Sintaxi coneguda com **Snake Cake**. En altres llenguatges de programació s'utilitza **Camel Cake** `nomDelTutor`.
+
+Restriccions:
+
+- No donar nom de paraules reservades per als  noms del sistema.
+- No has de colocar la primera lletra en majúscula, en cas contrari parlariem de constant.
+- No començar la variable amb un nombre.
+- Es pot conemçar amb un guió baix.
