--- a/_posts/2017-04-13-Install.md
+++ b/_posts/2017-04-13-Install.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 01 Hola món
+title: 01 Instal·lar
 date: dv 14 abr 2017 00:00:07 CEST 
 description: Iniciant la prongramació creant una classe
 keywords: class
