--- a/_posts/2017-04-14-variables_02.md
+++ b/_posts/2017-04-14-variables_02.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 04 Conversió de tipus
-date: dv 14 abr 2017 08:13:49 CEST 
+date: dv 14 apr 2017 08:13:49 CEST 
 description: Convertir tipus de dades 
 keywords: tipus 
 coments: true
