--- a/_posts/2017-04-17-nombres.md
+++ b/_posts/2017-04-17-nombres.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 07 Nombres
-date: dl 17 abr 2017 05:37:35 CEST 
+date: dl 17 apr 2017 05:37:35 CEST 
 description: Operar amb nombres 
 keywords: nombres numbers
 coments: true
