--- a/_posts/2017-04-18-strings.md
+++ b/_posts/2017-04-18-strings.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 08 Strings
-date: dt 18 abr 2017 08:59:22 CEST 
+date: dt 18 apr 2017 08:59:22 CEST 
 description: Cadenes o Strings
 keywords: strings
 coments: true
