--- a/_posts/2017-04-20-sintaxis.md
+++ b/_posts/2017-04-20-sintaxis.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 10 Sitaxi
-date: dj 20 abr 2017 07:11:56 CEST 
+date: dj 20 apr 2017 07:11:56 CEST 
 description: Sintaxis 
 keywords: sintax
 coments: true
