--- a/_posts/2017-04-25-case.md
+++ b/_posts/2017-04-25-case.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 15 Case
-date: dt 25 abr 2017 06:00:22 CEST 
+date: dt 25 apr 2017 06:00:22 CEST 
 description: Mètode Case 
 keywords: case
 coments: true
