--- a/_posts/2017-04-26-llistes.md
+++ b/_posts/2017-04-26-llistes.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 16 Llistes
-date: dc 26 abr 2017 06:01:39 CEST 
+date: dc 26 apr 2017 06:01:39 CEST 
 description: El que en Python s'anomenen llistes
 keywords: llistes list
 coments: true
