--- a/_posts/2017-04-29-range.md
+++ b/_posts/2017-04-29-range.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 19 Rangs
-date: ds 29 abr 2017 08:07:39 CEST 
+date: ds 29 apr 2017 08:07:39 CEST 
 description: Rangs
 keywords: range
 coments: true
