--- a/_posts/2017-04-13-Iniciant.md
+++ b/_posts/2017-04-13-Iniciant.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 00 Iniciant
-date: dj 13 abr 2017 18:30:05 CEST 
+date: dj 13 apr 2017 18:30:05 CEST 
 description: Inici 
 keywords: ruby
 comments: true
