--- a/_posts/2017-04-14-variables_01.md
+++ b/_posts/2017-04-14-variables_01.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 03 Variables
-date: dv 14 abr 2017 08:05:20 CEST 
+date: dv 14 apr 2017 08:05:20 CEST 
 description: Variables 
 keywords: variables
 coments: true
