--- a/_posts/2017-04-27-each.markdown
+++ b/_posts/2017-04-27-each.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 17 Each
-date: dj 27 abr 2017 05:38:00 CEST 
+date: dj 27 apr 2017 05:38:00 CEST 
 description: Iterar
 keywords: iteration
 coments: true
