--- a/_posts/2017-04-13-Iniciant.md
+++ b/_posts/2017-04-13-Iniciant.md
@@ -59,7 +59,7 @@ Inicie aquest blog amb tres objectius:
 - TeeSpring
 - Square
 - Tumblr
-- Twiter (originalment)
+- Twitter (originalment)
 
 ### Per què usar Ruby?
 
@@ -69,4 +69,4 @@ Inicie aquest blog amb tres objectius:
 - No t'agrada repetir codi
 - Vols ser part d'una comunitat activa
 
-
+Font [Código Facilito](https://youtu.be/fvrphRoN7P0)
