--- a/_posts/2017-04-14-variables_01.md
+++ b/_posts/2017-04-14-variables_01.md
@@ -79,3 +79,5 @@ Restriccions:
 - No has de colocar la primera lletra en majúscula, en cas contrari parlariem de constant.
 - No començar la variable amb un nombre.
 - Es pot conemçar amb un guió baix.
+
+Font [Código Facilito](https://youtu.be/UeEKzZz6jwQ)
