--- a/_posts/2017-05-02-matrix.md
+++ b/_posts/2017-05-02-matrix.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 22 Matrix
-date: dt 02 mai 2017 06:11:02 CEST 
+date: dt 02 may 2017 06:11:02 CEST 
 description: Matrix 
 keywords: matrix
 coments: true
