--- a/_posts/2017-05-14-hashes.md
+++ b/_posts/2017-05-14-hashes.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 23 Hashes
-date: dg 14 mai 2017 06:31:05 CEST 
+date: dg 14 may 2017 06:31:05 CEST 
 description: Hashes o diccionaris 
 keywords: hash
 coments: true
