Post d'instal·lació revisat

--- a/_posts/2017-04-13-Install.md
+++ b/_posts/2017-04-13-Install.md
@@ -7,11 +7,88 @@ keywords: class
 coments: true
 ---
 
-Instal·lació
+Per instal·lar ruby tenim dos camins:
+
+# 1. Instal·lació per mig del repositori d'Ubuntu #
 
 ```bash
 sudo apt install ruby irb rdoc
 ```
+
+
+# 2. Instal·lació manual per mig del repositori Ruby Version Manager #
+
+## 2.0. Claus ##
+
+> gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
+
+Aquest tipus d'instal·lació ens permet definir fàcilment la versió de Ruby que anem a emprar, podem canviar de versió sesons ens convinga. Així que podem utilizar la versió estable o podem utilizar una versió testing.
+
+Per accedir a aquest mètode hem d'anar a [Ruby Version Manager](http://rvm.io/).
+
+## 2.1. Consultarem els passos d'instal·lacio ##
+
+[Cheat sweet](http://cheat.errtheblog.com/s/rvm).
+
+## 2.2. Instal·lem Ruby, versió estable ##
+
+> \curl -sSL https://get.rvm.io | bash -s stable --ruby
+
+*To start using RVM you need to run `source /home/usuari/.rvm/scripts/rvm` in all your open shell windows, in rare cases you need to reopen all shell windows.*
+
+Per començar utilitzant RVM necessites córrer `source /home/usuari/.*rvm/scripts/rvm` dins tota la vostra *shell* oberta finestres, en casos rars necessites reobrir totes finestres de la *shell*.
+
+Per fer el mateix, també ens podrem situar al directori `/~.rvm/script/` i executar `source rvm`.
+
+D'aquesta manera tindrem **Ruby** funcionant.
+
+## 2.3. Instal·lar Rails ##
+
+> \curl -sSL https://get.rvm.io | bash -s stable --rails
+
+Podem instal·lar Ruby on Rails amb totes les dependències des de: [http://railsinstaller.org](http://railsinstaller.org/en).
+
+*To start using RVM you need to run `source /home/usuari/.rvm/scripts/rvm` in all your open shell windows, in rare cases you need to reopen all shell windows.*
+
+Per començar utilitzant RVM necessites córrer `source /home/usuari/.*rvm/scripts/rvm` dins tota la vostra *shell* oberta finestres, en casos rars necessites reobrir totes finestres de la *shell*.
+
+## 2.4. No és necessari, de moment instal·lar JRuby, una implementació de Ruby per a Java ##
+
+NO instal·lem **JRuby**, ni **Rails** ni **Puma** en aquest entorn.
+
+> \curl -sSL https://get.rvm.io | bash -s stable --ruby=jruby --gems=rails,puma
+
+Més informació ací: [http://jruby.org/](http://jruby.org/)
+
+
+## 2.4. Per a NO Instal·lar les rubygems-bundler i rvm gems, i també llevem aquestes gemmes des de global.gems i default.gems##
+
+NO FER AQUEST PAS, ja que utilitzarem les rubygems.
+
+> \curl -sSL https://get.rvm.io | bash -s stable --without-gems="rvm rubygems-bundler"
+
+## 2.4. Intal·lem hirb, la terminal interactiva de Ruby, irb ##
+
+> \curl -sSL https://get.rvm.io | bash -s stable --with-gems="hirb"
+
+
+## 2.5. Instal·lem halm gems i ho afegim a default.gems ##
+
+> \curl -sSL https://get.rvm.io | bash -s stable --with-default-gems="rails haml"
+
+Es tracta d'una sèrie de gemmes generadores de Rails que vàren estar incorporades a partir de Rails 4.
+
+## 2.6. Sense autolibs ##
+
+> \curl -sSL https://get.rvm.io | bash -s -- --autolibs=read-fail
+
+[Autolibs](https://rvm.io/rvm/autolibs) és una mode és una característica de contrucció de RVM què habilita automàticament les dependències del sistema. Aquestes dependències són OpenSSL, YAML i d'altres.
+
+## 2.7. Per veure una barra de progrés mentre es descarrega RVM / Rubies ##
+
+> echo progress-bar >> ~/.curlrc
+
+# 3. Altres coses importants #
 
 Saber la versió de Ruby
 
