Revisió post install

--- a/_posts/2017-04-13-Install.md
+++ b/_posts/2017-04-13-Install.md
@@ -86,7 +86,7 @@ Es tracta d'una sèrie de gemmes generadores de Rails que vàren estar incorpora
 
 ## 2.9. Per veure una barra de progrés mentre es descarrega RVM / Rubies ##
 
-> echo progress-bar >> ~/.curlrc
+> `echo progress-bar >> ~/.curlrc`
 
 # 3. Altres coses importants #
 
