Canvi en els estils

--- a/_posts/2017-05-14-hashes.md
+++ b/_posts/2017-05-14-hashes.md
@@ -22,6 +22,8 @@ La forma més senzilla de definir un hash és amb doble clau.
 
 Els hash tenen dues parts: la clau i el valor.
 
+{% raw %}
+
 ```ruby
 tutor = {{ "nombre " => "Uriel", "edad" => 23, 20 => "Vint", [] => "llista" }}
 
@@ -128,5 +130,5 @@ En nombre està guardat Uriel
 En edad està guardat 23
 En cursos està guardat 10
 ```
-
+{% endraw %}
 
