--- a/_posts/2017-06-12-43-Sintaxi.md
+++ b/_posts/2017-06-12-43-Sintaxi.md
@@ -35,7 +35,7 @@ Exemple: `PisGran`
 - Soles es poden definir una vegada
 - Han d'ésser escrites en llegres majúscules
 
-Exemple: PDF_KEY, R2D2, PERSONA_VIATGE
+Exemple: `PDF_KEY`, `R2D2`, `PERSONA_VIATGE`
 
 ### Variables d'objecte o (variables d'instància) ###
 
@@ -61,7 +61,33 @@ Els símbols són identificadors únics que els trobem en diversos llocs.
 
 Exemple: `:nom`, `:edat`, `:Classe`
 
+### Funcions ###
 
+Les funcioes estan definides per la paraula clau `def`.
+
+Els arguments poden tenir valors per defecte.
+
+```ruby
+def foo(count = 3)
+  'foo'*count
+end
+```
+
+Les funcions es defineixen per la paraula clau `def`.
+
+```ruby
+def hola(programador)
+  puts "Hola #{programador}"
+end
+
+hola('Pepe')
+```
+
+Output
+
+```
+Hola Pepe
+```
 
 
 Font: [Ruby Tutorial en 15 minutos](http://rubytutorial.wikidot.com/ruby-15-minutos#toc3)
