--- a/_posts/2017-05-14-hashes.md
+++ b/_posts/2017-05-14-hashes.md
@@ -8,7 +8,7 @@ coments: true
 ---
 
 
-Un **hash** es una estructura que magatzema dades como un diccionari ho fafia. També es diuen llistes associatives.
+Un **hash** es una estructura que magatzema dades como un diccionari ho faria. També es diuen llistes associatives.
 
 La diferència que existeix antre un hash i una llista és la forma d'accedir a les dades que es magatzemen.
 
