--- a/_posts/2017-05-18-metodes.md
+++ b/_posts/2017-05-18-metodes.md
@@ -10,7 +10,7 @@ coments: true
 Métodes y arguments
 
 
-Abordarem el tema en el context on aquestes funcions estan fora dels objectes.
+Abordarem el tema en el context on aquestes funcions están fora dels objectes.
 
 Un **mètode** és un grup de codi que es pot reciclar.
 
@@ -110,8 +110,6 @@ puts square(3)
 ```
 
 Output
-
-```ruby
 
 ### 5. Exemple l'`string`
 
