--- a/_posts/2017-05-19-splat.md
+++ b/_posts/2017-05-19-splat.md
@@ -13,11 +13,11 @@ Operador Splat
 
 ```ruby
 def hola_gente(personas)
-  personas.each {|personas| puts "Hola #{{personas}}"}
+  personas.each {|personas| puts "Hola #{personas}"}
 end
 
 
-hola_gente({"Uriel","Coco")
+hola_gente("Uriel","Coco")
 ```
 
 Output
