--- a/_posts/2017-04-26-llistes.md
+++ b/_posts/2017-04-26-llistes.md
@@ -15,7 +15,8 @@ Quansevol dada es pot magatzemar amb un llista.
 
 ### 1. Imprim dos llistes
 
-```rubyllista = [3,'perro',true ]
+```ruby
+llista = [3,'perro',true ]
 
 llista_dos = Array.new(5)
 
