--- a/_posts/2019-05-01-53-RubyPandoc.md
+++ b/_posts/2019-05-01-53-RubyPandoc.md
@@ -1,6 +1,6 @@
 ---
 layout: post # note, post, report, capture
-title: 53 RubyPandoc
+title: 53 RubyPandoc - PandocRuby
 date: 2019-05-01
 description: Utilitzar Pandoc dins d'scripts de Ruby
 keywords: ruby pandoc
@@ -12,3 +12,5 @@ Podem aprofitar la potència de Pandoc utilitzant la gema `RubyPandoc` per gener
 Cal seguir els passos d'aquest repositori:
 
 [https://github.com/dalehamel/ruby-pandoc](https://github.com/dalehamel/ruby-pandoc)
+
+[https://github.com/alphabetum/pandoc-ruby](https://github.com/alphabetum/pandoc-ruby)
