--- a/_posts/2019-05-25-55-yield.md
+++ b/_posts/2019-05-25-55-yield.md
@@ -9,6 +9,8 @@ coments:  # Comentaris
 
 La paraula `yield` s'utilitza per cridar blocks definits, és una paraula genèrica per cridar troços de codi que han estat declarats.
 
+### Exemple 1
+
 ```ruby
 def callBlock
   yield
@@ -27,3 +29,21 @@ Contingut del block
 ```
 
 Font [The Pragmatic Programmer Ruby](https://ruby-doc.com/docs/ProgrammingRuby/)
+
+
+### Exemple 2
+
+```ruby
+a = %w( formiga ovella gat gos elefant )
+a.each { |animal| puts a
+```
+
+Output
+
+```ruby
+formiga
+ovella
+gat
+gos
+elefant
+```
