--- a/_posts/2019-05-25-56-gets.md
+++ b/_posts/2019-05-25-56-gets.md
@@ -30,6 +30,20 @@ puts missatge.colorize(:light_green)
 puts missatge.colorize(:light_green).colorize( :background => :blue)
 ```
 
+
+Output
+
+```ruby
+hola
+Hola
+hola
+
+Hola
+
+hola
+
+hola
+```
 Nótese que hem afegit el mòdul `colorize`, per tal que funcione cal instal·lar-ho amb `gem install colorize`.
 
-Font: (The Pragmatic Programmer Ruby)[https://ruby-doc.com/docs/ProgrammingRuby/]
+Font: [The Pragmatic Programmer Ruby[(https://ruby-doc.com/docs/ProgrammingRuby/)
