--- a/_posts/2019-05-26-58-Ruby-GTK3.md
+++ b/_posts/2019-05-26-58-Ruby-GTK3.md
@@ -9,7 +9,7 @@ coments:
 
 Per tal d'incorporar un entorn gràfic als comandaments de Ruby podem utilitzar diverses llibrerires entre les què estan aquestes:
 
-- [Ruby GTK3](http://shoesrb.com/)
+- [Ruby GTK3](https://github.com/cedlemo/ruby-gtk3-tutorial)
 - [Shoes](http://shoesrb.com/)
 - [FxRuby](http://shoesrb.com/)
 - [Zenity](https://wiki.gnome.org/action/show/Projects/Zenity?action=show&redirect=Zenity)
