--- a/_posts/2019-05-28-59-Classe.md
+++ b/_posts/2019-05-28-59-Classe.md
@@ -9,6 +9,8 @@ coments:  # Comentaris
 
 Exemple de classe senzilla
 
+Font: [Ruby Essetntials](https://www.techotopia.com/index.php/Ruby_Essentials)
+
 ### Exemple 1
 
 ```ruby
