Incorporació de la font

--- a/_posts/2019-05-29-60-Strings.md
+++ b/_posts/2019-05-29-60-Strings.md
@@ -9,6 +9,7 @@ coments:  # Comentaris
 
 Per tal de declarar cadenes o `strings`.
 
+Font: [Ruby Strings - Creation and Basics](https://www.techotopia.com/index.php/Ruby_Strings_-_Creation_and_Basics)
 
 Definirem cadenes així:
 
