--- a/_posts/2019-05-29-60-Strings.md
+++ b/_posts/2019-05-29-60-Strings.md
@@ -28,6 +28,14 @@ puts myString2
 puts myString3
 ```
 
+Output
+
+```ruby
+This is my String 1
+This is my String 2
+This is my String 3
+```
+
 
 ### Exemple 2
 
@@ -46,4 +54,22 @@ Nam tellus sapien, porta id felis at, ornare finibus ipsum. Aliquam a tortor lig
 
 Donec ante urna, lacinia vel ultricies ac, ultricies sit amet mi. Mauris vitae laoreet urna. Nullam elementum orci massa. Suspendisse potenti. Nulla vitae porttitor nunc. Praesent et sem sit amet orci hendrerit consequat. Donec vel justo ut nibh consequat porta eget a nibh. Vestibulum lorem leo, porttitor a elementum vel, euismod vitae mi. Pellentesque in tortor condimentum, vulputate mauris a, dictum augue. Curabitur eros mi, varius vitae tempor eget, ultricies at nisi. Vestibulum dui lorem, auctor in auctor pretium, iaculis vitae risus. Fusce metus nunc, dictum a lacus a, tristique vestibulum augue. Quisque justo orci, aliquet eget dictum vel, volutpat vel libero. Quisque aliquet magna in velit condimentum iaculis.
 DOC
+
+puts myLorem
 ```
+
+
+Output
+
+```ruby
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ultricies nunc. Nam posuere mattis consequat. Proin auctor nisl eleifend metus vulputate, non porttitor dolor tincidunt. Nulla sodales augue ut ultrices congue. Donec aliquam odio sit amet aliquet posuere. Nullam vitae sodales massa, et efficitur elit. In suscipit posuere tortor sit amet posuere. Nunc nec leo eu leo euismod ornare at vitae quam.
+
+        In non interdum elit, ac hendrerit mi. Vestibulum faucibus ante non velit mollis convallis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus blandit quis orci consectetur bibendum. Sed condimentum dignissim rhoncus. Vestibulum in vehicula augue. Duis nec placerat erat. Phasellus elit leo,pellentesque ac nibh vel, pharetra volutpat turpis. Nullam placerat tortor vitae molestie feugiat. Nulla ut hendrerit turpis, cursus lacinia ex. Integer at interdum nunc. Duis at mattis ligula. Cras consectetur a mauris at ultrices.
+
+        Donec pellentesque at eros eu semper. Integer sed finibus neque. Etiam ante magna, sagittis molestie sodalessit amet, hendrerit posuere turpis. Suspendisse ac sem orci. Vivamus fringilla non ex quis efficitur. Vestibulum id scelerisque tellus. Donec risus neque, finibus lacinia sagittis vel, vehicula sed libero. Nullam scelerisque velit odio, iaculis pulvinar nunc tincidunt non. Proin laoreet accumsan leo quis auctor. Fusce eget pharetra sem. Donec vestibulum in mi a laoreet. Donec semper mauris odio, ut gravida diam sollicitudin non.
+
+        Nam tellus sapien, porta id felis at, ornare finibus ipsum. Aliquam a tortor ligula. Curabitur ut dignissim tellus, nec sodales mi. Sed cursus eu leo vitae dictum. Praesent sodales at diam a vehicula. Mauris vitae imperdiet risus. Aliquam luctus, felis et posuere tincidunt, neque eros aliquam velit, quis hendrerit nulla magna vitae dolor.
+
+        Donec ante urna, lacinia vel ultricies ac, ultricies sit amet mi. Mauris vitae laoreet urna. Nullam elementum orci massa. Suspendisse potenti. Nulla vitae porttitor nunc. Praesent et sem sit amet orci hendrerit consequat. Donec vel justo ut nibh consequat porta eget a nibh. Vestibulum lorem leo, porttitor a elementum vel, euismod vitae mi. Pellentesque in tortor condimentum, vulputate mauris a, dictum augue. Curabitur eros mi, varius vitae tempor eget, ultricies at nisi. Vestibulum dui lorem, auctor in auctor pretium, iaculis vitae risus. Fusce metus nunc, dictum a lacus a, tristique vestibulum augue. Quisque justo orci, aliquet eget dictum vel, volutpat vel libero. Quisque aliquet magna in velit condimentum iaculis.
+```
+
