--- a/_posts/2019-06-02-63-Class.md
+++ b/_posts/2019-06-02-63-Class.md
@@ -9,7 +9,7 @@ coments: Comprén les diferents parts del concepte de classe
 
 Font: [Font](https://www.tutorialspoint.com/ruby/ruby_object_oriented.htm)
 
-### 1. Concpetualització
+### 1. Conceptualització
 
 - **Ruby** és un llenguatge purament orientat a objectes, tot es veu com un objecte.
 - Cada valor és un objecte, inclús les coses més simples: **cadenes**, **nombres**, **booleans**...
@@ -326,6 +326,12 @@ box.printArea()
 ```
 
 Quan s'executa el codi anterior, es produeix el següent resultat. Aquí, el primer mètode es diu amb èxit, però el segon mètode ha donat un problema.
+
+```ruby
+Area of the box is : 200
+test.rb:42: protected method `printArea' called for #
+<Box:0xb7f11280 @height = 20, @width = 10> (NoMethodError)
+```
 
 ### 11. Herència de classe
 
