--- a/_posts/2019-06-05-64-Variables.md
+++ b/_posts/2019-06-05-64-Variables.md
@@ -11,6 +11,12 @@ Font: [Tutorials Point](https://www.tutorialspoint.com/ruby/ruby_variables.htm)
 
 ### 1. Variables globals
 
+Les variables globals comencen per $. Les variables globals no inicialitzades tenen el valor nil i produeixen advertències amb l’opció -w.
+
+L'assignació a variables globals altera l'estat global. No es recomana utilitzar variables globals. Fan críptics els programes.
+
+Aquí teniu un exemple que mostra l’ús de la variable global.
+
 ```ruby
 #!/usr/bin/ruby
 
@@ -39,6 +45,10 @@ Global variable in Class2 is 10
 ```
 
 ### 2. Variables d'instància
+
+Les variables d'instància comencen per @. Les variables d'instància no inicialitzades tenen el valor nil i produeixen advertències amb l’opció -w.
+
+Aquí teniu un exemple que mostra l’ús de variables d’instància.
 
 ```ruby
 #!/usr/bin/ruby
