--- a/_posts/2019-06-06-65-Copy-Web.md
+++ b/_posts/2019-06-06-65-Copy-Web.md
@@ -20,3 +20,5 @@ File.open(wiki_local_filename, "w") do |file|
    file.write(RestClient.get(wiki_url))
 end
 ```
+
+Font: [bastardsbook.com](http://ruby.bastardsbook.com/chapters/io/)
