--- a/_posts/2019-08-26-68-Objectes.md
+++ b/_posts/2019-08-26-68-Objectes.md
@@ -7,41 +7,154 @@ keywords:
 coments: 
 ---
 
-Un objecte és una peça autocontinguda, amb funcionalitat, que pot ser fàcilment usada i reusada per a construir blocks d'una aplicació de software.
+### Definint una **Ruby Class**
+
+> Un objecte és una peça autocontinguda, amb funcionalitat, que pot ser fàcilment usada i reusada per a construir blocs d'una aplicació de software.
 
 Els **objectes** consisteixen en dades variables i funcions (anomenats mètodes), els quals es oden accedir i ser cridats sobre objectes mitjançant tasques.
 
-Tot en Ruby és un objecte, nombres, arrays, strings, etc.
+Tot en Ruby és un **objecte**, *nombres*, *arrays*, *strings*, etc.
 
 Les **classes** en Ruby es defineixen mitjançant la paraula `class` i cal finalitzar amb la paraula `end`, així:
 
 ```Ruby
-class ConteBank
+class BankAccount
   def inicialice ()
   end
 
-  def test_metode
-    puts "La classe està treallant"
+  def test_methode
+    puts "The class is working"
   end
 end
 ```
 
-Hen definit la classe `ConteBank`, amb el mètode `test_metode` amb un simple `string`.
+Hen definit la classe `BankAccount`, amb el mètode `test_method` amb un simple *string*.
 
-La **inicialització** del mètode crida l'objecte basat en aquesta classe, inicialitzant-lo. Es pot inicialitzar el mètode passant arguments a la classe iniciada.
+La **inicialització** del mètode `()` crida l'objecte basat en aquesta classe, inicialitzant-lo. Es pot inicialitzar el mètode passant arguments a la classe iniciada.
 
 ### Crearem un **objecte** des d'una **classe**.
 
-Com que ja tenim creada la classe `ConteBank`, simplement creem la instància:
+Com que ja tenim creada la classe `BankAccount`, simplement creem la instància:
 
 ```Ruby
-account = ConteBank.new()
+account = BankAccount.new()
 ```
 
-Aquest crea un objecte `ConteBank` anomenat `conte`. Creat l'objecte podem cridar el nostre mètode:
+Aquest crea un objecte `BankAccount` anomenat `account`. Creat l'objecte podem cridar el nostre mètode:
 
 ```Ruby
-conte.test_metode
-La classe està treballant
+account.test_method
+The class is working
 ```
 
+### Variables d'Instància i Accés a Mètodes ###
+
+Les **variables d'instància** sóns variables definides sols per cada instància de la classe. Les **variables d'instància** poden der definides **dins** o **fora** dels **mètodes de classe**.
+
+Per fer variables disponibles des de fora de la classe, han de ser definides mitjançat mètodes accessibles.
+
+Així definirem les variables mitjançant una `@`, així esterem definint que són **variables associades a mètodes**.
+
+```Ruby
+class CompteBank
+
+	def accountNumber
+		@accountNumber = "12345"
+	end
+
+	def accountName
+		@accountName = "John Smith"
+	end
+
+	def inicialize ()
+	end
+
+	def test_method
+		puts "The class is working"
+		puts accountNumber
+	end
+
+end
+```
+
+Ara tenim dues instàncies anomenades `@accountNumber` i `@accountName` amb mètodes d'accés associats. Així que, ara podrem accedir a aquestes variables des de fora:
+
+```Ruby
+account = BanckAccount.new()
+puts account.accontNumber
+puts account.accountName
+``
+
+Els dos estaments de dalt ens retornaran les dues variables pels mètods d'accés, en aquest cas: `12345` i `John Smith` respectivament.
+
+Ara podem aconseguir el valor de la variable d'instància, nosaltres, ara necessitem retornar als mètodes d'accés de manera que configurem el valor de la variable d'instància. Una maera de fer-ho és configurar els mètodes. Netejarem la classe `BankAccount`, així que establirem les dues variables d'instància així:
+
+```Ruby
+class BankAccount
+
+	def accountNumber
+		@accountNumber
+	end
+
+	def accountNumber = (value)
+		@accountNumber = value
+	end
+
+	def accountName
+		@accountName
+	end
+
+	def
+		@accountName = (value)
+		@accountName = value
+	end
+
+end
+```
+
+Podem crear ara una instància de la nostra classe, configurar el nom de compte i usar l'accés a ells:
+
+```Ruby
+account = BanckAccount.new()
+
+account.accountNumber = "54321"
+account.accountName = "Fred Flintstone"
+
+puts account.accountNumber
+puts account.accountName
+```
+
+### Variables de Classe Ruby ###
+
+Una **variable de classe** compartida entre totes les instàncies de classe. En altres paraules, hi ha una instància de variables i accessos mitjançant instàncies d'objectes. Una variable d'instància ha de ser inicialitzada mitjançant una definició. Les variables de classe són prefixades amb dos caracters `@`, es a dir, `@@`.
+
+Mostrarem com afegir la variable de classe `@@interest_rate`:
+
+```Ruby
+class BankAccount
+
+	def interest_rate
+		@@interest_rate = 0.2
+	end
+
+	def accountNumber
+		@accountNumber
+	end
+
+	def accountNumber = (value)
+		@accountNumber = value
+	end
+
+	def accountName
+		@accountName
+	end
+
+	def accountName = (value)
+		@accountNme = value
+	end
+
+end
+```
+
+
+Font: [https://www.techotopia.com/index.php/Ruby_Object_Oriented_Programming](https://www.techotopia.com/index.php/Ruby_Object_Oriented_Programming)
