Finalització del concepte de classe de Ruby

--- a/_posts/2019-08-26-68-Objectes.md
+++ b/_posts/2019-08-26-68-Objectes.md
@@ -11,11 +11,11 @@ coments:
 
 > Un objecte és una peça autocontinguda, amb funcionalitat, que pot ser fàcilment usada i reusada per a construir blocs d'una aplicació de software.
 
-Els **objectes** consisteixen en dades variables i funcions (anomenats mètodes), els quals es oden accedir i ser cridats sobre objectes mitjançant tasques.
+Els **objectes** consisteixen en dades, variables i funcions (anomenats mètodes), els quals es oden accedir i ser cridats sobre objectes mitjançant tasques.  
 
-Tot en Ruby és un **objecte**, *nombres*, *arrays*, *strings*, etc.
+Tot en Ruby és un **objecte**, *nombres*, *arrays*, *strings*, etc.  
 
-Les **classes** en Ruby es defineixen mitjançant la paraula `class` i cal finalitzar amb la paraula `end`, així:
+Les **classes** en Ruby es defineixen mitjançant la paraula `class` i cal finalitzar amb la paraula `end`, així:  
 
 ```Ruby
 class BankAccount
@@ -28,9 +28,9 @@ class BankAccount
 end
 ```
 
-Hen definit la classe `BankAccount`, amb el mètode `test_method` amb un simple *string*.
+Hen definit la classe `BankAccount`, amb el mètode `test_method` amb un simple *string*.  
 
-La **inicialització** del mètode `()` crida l'objecte basat en aquesta classe, inicialitzant-lo. Es pot inicialitzar el mètode passant arguments a la classe iniciada.
+La **inicialització** del mètode `()` crida l'objecte basat en aquesta classe, inicialitzant-lo. Es pot inicialitzar el mètode passant arguments a la classe iniciada.  
 
 ### Crearem un **objecte** des d'una **classe**.
 
@@ -49,11 +49,11 @@ The class is working
 
 ### Variables d'Instància i Accés a Mètodes ###
 
-Les **variables d'instància** sóns variables definides sols per cada instància de la classe. Les **variables d'instància** poden der definides **dins** o **fora** dels **mètodes de classe**.
+Les **variables d'instància** sóns variables definides sols per cada instància de la classe. Les **variables d'instància** poden der definides **dins** o **fora** dels **mètodes de classe**.  
 
-Per fer variables disponibles des de fora de la classe, han de ser definides mitjançat mètodes accessibles.
+Per fer variables disponibles des de fora de la classe, han de ser definides mitjançat mètodes accessibles.  
 
-Així definirem les variables mitjançant una `@`, així esterem definint que són **variables associades a mètodes**.
+Així definirem les variables mitjançant una `@`, així esterem definint que són **variables associades a mètodes**.  
 
 ```Ruby
 class CompteBank
@@ -83,9 +83,9 @@ Ara tenim dues instàncies anomenades `@accountNumber` i `@accountName` amb mèt
 account = BanckAccount.new()
 puts account.accontNumber
 puts account.accountName
-``
+```
 
-Els dos estaments de dalt ens retornaran les dues variables pels mètods d'accés, en aquest cas: `12345` i `John Smith` respectivament.
+Els dos estaments de dalt ens retornaran les dues variables pels mètods d'accés, en aquest cas: `12345` i `John Smith` respectivament.  
 
 Ara podem aconseguir el valor de la variable d'instància, nosaltres, ara necessitem retornar als mètodes d'accés de manera que configurem el valor de la variable d'instància. Una maera de fer-ho és configurar els mètodes. Netejarem la classe `BankAccount`, així que establirem les dues variables d'instància així:
 
@@ -126,7 +126,7 @@ puts account.accountName
 
 ### Variables de Classe Ruby ###
 
-Una **variable de classe** compartida entre totes les instàncies de classe. En altres paraules, hi ha una instància de variables i accessos mitjançant instàncies d'objectes. Una variable d'instància ha de ser inicialitzada mitjançant una definició. Les variables de classe són prefixades amb dos caracters `@`, es a dir, `@@`.
+Una **variable de classe** compartida entre totes les instàncies de classe. En altres paraules, hi ha una instància de variables i accessos mitjançant instàncies d'objectes. Una variable d'instància ha de ser inicialitzada mitjançant una definició. Les variables de classe són prefixades amb dos caracters `@`, es a dir, `@@`.  
 
 Mostrarem com afegir la variable de classe `@@interest_rate`:
 
@@ -152,6 +152,74 @@ class BankAccount
 	def accountName = (value)
 		@accountNme = value
 	end
+
+end
+```
+### Instancies de mètodes ###
+
+Tot i que hem estudiat breuent els mètodes d'instància, fins ara ens hem centrat en l'emmagatzematge de dades d'una classe.
+
+Els mètodes d'instància són mètodes que es poden cridar a una instància de la classe. Els mètodes d'instància poden accedir a variables de classe per a realitzar tasques i també poden acceptar valors com a arguments. Per exempe, poden afegir un mètode a la nostra classe que pren un saldo de compte nou com a argument i utilitzar la variable de classe `@@interest_rate` per calcular l'interés degut.
+
+```Ruby
+   def calc_interest ( balance )
+       puts balance * interest_rate
+   end
+```
+  
+Ara, és quan creem una instància de la nostra classe, nosaltres podem cridar al nou mètode:
+
+```Ruby
+account = BankAccount
+acoount.calc_interest( 1000 )
+700.0
+```
+### Herència de les classes de Ruby ###
+
+Ruby suporta herència simple. Això significa que una subclasse pot ser creada heretant totes les variables i mètodes d'altra classe. La subclasse és llavors una extensió per afegir un nou mètode o variable no disponible en la superclasse.
+
+Una classe heredada d'altra usa el caracter `<`. Diu, per exemple, que nosaltres volem un nou tipus de classe `BankAccount`. Aquesta classe necessita tots les mateixes variables i mètoes que la nostra classe original, però també necessita el nombre de telèfon del client. Per fer-ho, simplement heretem de `BankAccount` i afegim una nova variable d'instància:
+
+```Ruby
+class NewBankAccount < BankAccount
+
+   def customerPhone
+        @customerPhone
+   end
+
+   def customerPhone=( value )
+        @customerPhone = value
+   end
+
+end
+```
+
+Ara tenim una nova classe, derivada de `BankAccount`. Aquesta nova subclasse inclou tot el que tenia la superclasse, a més d'una nova propietat: el nombre de telèfon del client.
+
+```Ruby
+account.accountNumber = "54321"
+account.customerPhone = "555-123-5433"
+54321
+555-123-5433
+```
+
+Tinguem en compte que l'exemple anterior assumeix que la declaració de la classe `BankAccount` es troba al mateix fitxer front Ruby que la declaració `NewBankAccount`.
+
+Si aquest no és el cas, s'ha utilitzat la declaració de requeriment per indicar a Ruby quin fitxer cal incloure per trobar la classe `BankAccount`.
+
+Si suposem que `BankAccount` està defint en un fitxer anomenat `BankAccount.rb`, inclouriem el fitxer de la següent manera:
+
+```Rubyrequire 'BankAccount'
+
+class NewBankAccount < BankAccount
+
+   def customerPhone
+        @customerPhone
+   end
+
+   def customerPhone=( value )
+        @customerPhone = value
+   end
 
 end
 ```
