--- a/_posts/2019-08-26-68-Objectes.md
+++ b/_posts/2019-08-26-68-Objectes.md
@@ -56,7 +56,7 @@ Per fer variables disponibles des de fora de la classe, han de ser definides mit
 Així definirem les variables mitjançant una `@`, així esterem definint que són **variables associades a mètodes**.  
 
 ```Ruby
-class CompteBank
+class BankAccount
 
 	def accountNumber
 		@accountNumber = "12345"
