--- a/_posts/2019-08-26-68-Objectes.md
+++ b/_posts/2019-08-26-68-Objectes.md
@@ -209,7 +209,8 @@ Si aquest no és el cas, s'ha utilitzat la declaració de requeriment per indica
 
 Si suposem que `BankAccount` està defint en un fitxer anomenat `BankAccount.rb`, inclouriem el fitxer de la següent manera:
 
-```Rubyrequire 'BankAccount'
+```Ruby
+require 'BankAccount'
 
 class NewBankAccount < BankAccount
 
